--- a/copy_files_to_speech_hosts/hosts.ini
+++ b/copy_files_to_speech_hosts/hosts.ini
@@ -1,15 +1,5 @@
 [speeches]
-speech01.securax.net
-speech02.securax.net
-speech03.securax.net
-speech04.securax.net
-speech05.securax.net
-speech06.securax.net
-speech07.securax.net
-speech08.securax.net
-speech09.securax.net
-speech10.securax.net
-speech11.securax.net
+speech01
 [speeches:vars]
 ansible_ssh_user=root
 ansible_ssh_private_key_file=/home/svetoslav/.ssh/id_rsa
