--- a/deploy_keys_existing_machines/hosts.ini
+++ b/deploy_keys_existing_machines/hosts.ini
@@ -1,6 +1,5 @@
 [hosts]
-speech02.securax.net
-speech04.securax.net
+speech02
 [hosts:vars]
 ansible_ssh_user=root
 ansible_ssh_private_key_file=/home/svetoslav/.ssh/id_rsa
