gradle, java, node playbooks

--- a/update-packages/hosts.ini
+++ b/update-packages/hosts.ini
@@ -1,6 +1,7 @@
+
 ## set up ssh user name and path to python3 ##
 [all:vars]
-ansible_user='root'
+ansible_user='pi'
 ansible_become=yes
 ansible_become_method=sudo
 ansible_python_interpreter='/usr/bin/python3'
@@ -11,5 +12,5 @@ ansible_python_interpreter='/usr/bin/python3'
 ## you can use ip address here too
 ###########################
 [servers]
-1111.1111.1111.1111
-
+192.168.0.102
+192.168.0.103
