--- a/hosts.ini
+++ b/hosts.ini
@@ -1,2 +1,2 @@
 [servers]
-192.168.0.120 ansible_ssh_user=svetoslav
+192.168.0.120 ansible_ssh_user=svetoslav ansible_python_interpreter=/usr/bin/python3
