--- a/java11.yml
+++ b/java11.yml
@@ -16,5 +16,14 @@
         path: /etc/environment
         line: JAVA_HOME="/usr/lib/jvm/java-11-openjdk-amd64"
 
-    - name: Source environment file
-      shell: echo "source /etc/environment"
+#reboot so changes take affect
+    - name: Check the uptime prior reboot
+      shell: uptime
+      register: UPTIME_PRE_REBOOT
+
+    - debug: msg={{UPTIME_PRE_REBOOT.stdout}}
+
+    - name: Reboot node and stop polling.
+      shell: reboot
+      async: 10 # Do not care for 10 sec
+      poll: 0 # Fire & Forget
