--- a/setup_ubuntu1804/playbook.yml
+++ b/setup_ubuntu1804/playbook.yml
@@ -3,6 +3,8 @@
 #################################################
 ---
 - hosts: all
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   become: true
   vars_files:
     - vars/default.yml
